# MedAI

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
myapp/prompts/: system.py  tool.py
myapp/repositories/: __init__.py  qdrant.py
myapp/services/: __init__.py  agent_service.py
myapp/tools/: qdrant.py
myapp/utils/: config.py  embeddings.py
scripts/: main_pipeline.py  search.py  vectorize_to_qdrant.py
