[project]
name = "medai"
version = "0.1.0"
description = "Медицинский ассистент по симптомам (MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "ollama>=0.6.1",
    "openai>=1.59.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
medai-api = "myapp.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myapp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
